--- a/java8-checker/pom.xml
+++ b/java8-checker/pom.xml
@@ -17,49 +17,49 @@
   <dependency>
    <groupId>org.checkerframework</groupId>
    <artifactId>checker-qual</artifactId>
-   <version>${checker-qual.version}</version>
+   <version>2.5.2</version>
   </dependency>
   <dependency>
    <groupId>org.checkerframework</groupId>
    <artifactId>checker</artifactId>
-   <version>${checker.version}</version>
+   <version>2.5.2</version>
   </dependency>
   <dependency>
    <groupId>org.checkerframework</groupId>
    <artifactId>jdk8</artifactId>
-   <version>${jdk8.version}</version>
+   <version>2.5.2</version>
   </dependency>
   <!-- The Type Annotations compiler. Uncomment if using annotations in comments. -->
-  <dependency>
-   <groupId>org.checkerframework</groupId>
-   <artifactId>compiler</artifactId>
-   <version>${checkerframework.compiler.version}</version>
-  </dependency>
+<!--   <dependency> -->
+<!--    <groupId>org.checkerframework</groupId> -->
+<!--    <artifactId>compiler</artifactId> -->
+<!--    <version>2.4.0</version> -->
+<!--   </dependency> -->
  </dependencies>
 
  <build>
   <plugins>
-   <plugin>
+<!--    <plugin> -->
     <!-- This plugin will set properties values using dependency information -->
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-dependency-plugin</artifactId>
-    <executions>
-     <execution>
-      <goals>
+<!--     <groupId>org.apache.maven.plugins</groupId> -->
+<!--     <artifactId>maven-dependency-plugin</artifactId> -->
+<!--     <executions> -->
+<!--      <execution> -->
+<!--       <goals> -->
        <!-- Goal that sets a property pointing to the artifact file for each project dependency. For each dependency (direct and transitive) a project property will be set which follows the: groupId:artifactId:type:[classifier] 
         form and contains the path to the resolved artifact. -->
-       <goal>properties</goal>
-      </goals>
-     </execution>
-    </executions>
-   </plugin>
+<!--        <goal>properties</goal> -->
+<!--       </goals> -->
+<!--      </execution> -->
+<!--     </executions> -->
+<!--    </plugin> -->
 
    <plugin>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.7.0</version>
     <configuration>
-     <source>${maven.compiler.source}</source>
-     <target>${maven.compiler.target}</target>
+     <source>1.8</source>
+     <target>1.8</target>
      <!-- Uncomment the following line to use the type annotations compiler. -->
      <!-- <fork>true</fork> -->
      <compilerArguments>
@@ -96,11 +96,5 @@
   <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
   <!-- Uncomment to use the Type Annotations compiler. -->
   <!-- <typeAnnotationsJavac>${org.checkerframework:compiler:jar}</typeAnnotationsJavac> -->
-  <checker-qual.version>2.3.1</checker-qual.version>
-  <checker.version>2.3.1</checker.version>
-  <jdk8.version>2.3.1</jdk8.version>
-  <checkerframework.compiler.version>2.3.1</checkerframework.compiler.version>
-  <maven.compiler.source>1.8</maven.compiler.source>
-  <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
 </project>
